--- a/package.json
+++ b/package.json
@@ -8,7 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "axios": "^0.19.0",
+    "babel-plugin-component": "^1.1.1",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
+    "babel-plugin-import": "^1.12.0",
     "core-js": "^2.6.5",
+    "element-ui": "^2.10.1",
+    "iview": "^3.4.2",
+    "markdown-it": "^9.0.1",
+    "markdown-it-anchor": "^5.2.4",
+    "markdown-it-table-of-contents": "^0.4.4",
+    "tui-editor": "^1.4.4",
+    "uslug": "^1.0.4",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
