更换高亮插件

--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "babel-plugin-import": "^1.12.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.10.1",
+    "escape-html": "^1.0.3",
     "iview": "^3.4.2",
     "markdown-it": "^9.0.1",
     "markdown-it-anchor": "^5.2.4",
+    "markdown-it-highlightjs": "^3.0.0",
+    "markdown-it-prism": "^2.0.2",
     "markdown-it-table-of-contents": "^0.4.4",
+    "prismjs": "^1.17.1",
     "tui-editor": "^1.4.4",
     "uslug": "^1.0.4",
     "vue": "^2.6.10",
