--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prismjs": "^1.17.1",
     "tui-editor": "^1.4.4",
     "uslug": "^1.0.4",
+    "viewerjs": "^1.3.6",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
