--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "iview": "^3.4.2",
     "markdown-it": "^9.0.1",
     "markdown-it-anchor": "^5.2.4",
+    "markdown-it-emoji": "^1.4.0",
     "markdown-it-highlightjs": "^3.0.0",
     "markdown-it-prism": "^2.0.2",
     "markdown-it-table-of-contents": "^0.4.4",
